Use $border-width instead of a magic number for submenu alignment

--- a/packages/block-library/src/navigation/style.scss
+++ b/packages/block-library/src/navigation/style.scss
@@ -140,7 +140,7 @@ $navigation-sub-menu-height: $grid-size * 5;
 			.block-editor-inner-blocks,
 			.wp-block-navigation__container {
 				left: 100%;
-				top: - $grid-size - 1px; // -1px to account for border width
+				top: - $grid-size - $border-width;
 			}
 		}
 
