--- a/packages/block-library/src/navigation/style.scss
+++ b/packages/block-library/src/navigation/style.scss
@@ -180,7 +180,7 @@ $navigation-sub-menu-width: $grid-size * 25;
 
 		.wp-block-navigation-link__submenu-icon {
 			position: absolute;
-			right: $grid-size;
+			right: $grid-size * 2;
 
 			svg {
 				fill: currentColor;
