Better align grandchild links with bottom child links

--- a/packages/block-library/src/navigation/style.scss
+++ b/packages/block-library/src/navigation/style.scss
@@ -163,7 +163,7 @@ $navigation-sub-menu-width: $grid-size * 25;
 		// Submenu links only
 		.wp-block-navigation-link {
 
-			&:first-child .wp-block-navigation-link__content {
+			&:first-child:not(:only-child) .wp-block-navigation-link__content {
 				padding-top: $grid-size;
 			}
 
